# dotfiles

./: .ackrc  .alacritty.yml  .aliases  .bash_prompt  .bashrc  .bighbashrc  .bighrc  .bighzshrc  .bindings  .colors  .ctags.configs  .ctags.functions  .functions  .fzf.configs  .fzf.functions  .gitconfig  .gitconfig.stripe  .gitignore  .gitignore_global  .journal.configs  .local.configs  .nvim.init.vim  .osx  .profile  .profile-before  .pryrc  .pure_setup  .retool.aliases  .retool.functions  .rgignore  .scratch.vimrc  .shell  .shell.bash  .shell.zsh  .shutil  .stripe-remote.aliases  .stripe-remote.configs  .stripe-remote.functions  .stripe-remote.profile  .stripe.aliases  (+64 more)
Code/: keybindings.json  settings.json
UltiSnips/: javascript.snippets  journal.snippets  jsx.snippets  ruby.snippets  typescript.snippets  typescriptreact.snippets
airtable/: a_alias.sh  aliases.sh  configs.sh  functions.sh  vimrc  vimrc-hyperbase
aliases/: all.sh  core.sh  docker-compose.sh  docker.sh  git.sh  kubectl.sh  yarn.sh
chime/: aliases.sh
configs/: all.sh  bat.sh  core.sh  ctags.sh  freezer.sh  fzf.sh  github.sh  helm.sh  journal.sh  kubectl.sh  rg.sh
cursor/: keybindings.json  settings.json
functions/: all.sh  core.sh  docker.sh  fzf.sh  git.sh  github.sh  indent.sh  kubectl.sh  rg.sh
gh-dash/: config.yml
iterm/: Dark.json  com.googlecode.iterm2.plist  my-solarized-dark.itermcolors
notes/: general.md  vim.md  zsh.md
nvim/: init.lua  (+1 more)
nvim-test/: init.lua
siggy/: NOTES.md  README.md  pyproject.toml  siggy.bash  siggy.zsh
siggy/lib/: help.sh
siggy/src/: siggy.py
(+119 files in other folders)
