[project]
name = "siggy"
version = "0.1.0"
description = ""
authors = [
    {name = "Hiren Hiranandani",email = "hiren.hiranandani@chime.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "python-daemon (>=3.1.2,<4.0.0)",
    "pyro5 (>=5.15,<6.0)",
]

[tool.poetry]
packages = [{include = "siggy", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipython = "^9.2.0"
ipdb = "^0.13.13"
black = "^25.1.0"
flake8 = "^7.2.0"
autoflake = "^2.3.1"
isort = "^6.0.1"
pyright = "^1.1.400"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
